# rajesh-lab

./: .gitignore  AMBITION-ROADMAP.md  HANDOFF.md  README.md
compress/: DICTIONARY.md  STRATEGY.md  demo.js  dict.sample.csv
lossless/: BEST-STRATEGY.md  FORMAT.md  INSTALL.md  README.md  STRATEGY.md  archive.js  bench.js  build-exe.bat  build-sea.js  cm.js  demo.js  enc.js  lpaq.js  package.json  router.js  rz-ui.bat  rz.bat  rz.js  sea-config.json  ui.js
quantum/: qscript.js  qsim.js
quantum/examples/: bell.q
realscript/: LICENSE  README.md  realc.js  realc.min.js  run.bat
realscript/examples/: guestbook.real  hello.real  realblog.real  taskboard.real
records/: GUINNESS-APPLICATION.md  SMALLEST-CLAIM.md  attempt.real
rust/: Cargo.toml  README.md
rust/src/: main.rs
setup/: README.txt  install.bat  install.ps1  uninstall.ps1
tools/: purity.js
