[package]
name = "rz"
version = "0.2.0"
edition = "2021"
description = "Native try-all lossless compressor (Rust). Fast, ~2 MB exe."

[[bin]]
name = "rz"
path = "src/main.rs"

[dependencies]
# Pure-Rust only — no C compiler / system libraries needed, builds anywhere.
brotli = "6"                                   # pure-Rust brotli
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }  # gzip via miniz_oxide (pure Rust)

[profile.release]
opt-level = 3
lto = true
strip = true         # smallest binary
